# ignorepy

./: .gitignore  README.md  build.sh  copy_ignore.py  pyproject.toml
.github/workflows/: publish.yml
src/ignorepy/: genignore.py
tests/: test.py
